--- a/index.html
+++ b/index.html
@@ -39,13 +39,31 @@
             <h2 class="pillar-title">The Pillars</h2>
         </div>
 
-        <div class="pillars">
-            <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476302/talent_bhjpjn.jpg" alt=""></div>
-            <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476458/rnd_fiaz3f.jpg" alt=""></div>
-            <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476458/rnd_fiaz3f.jpg" alt=""></div>
-            <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476300/infrastructure_cgsdfv.jpg" alt=""></div>
-            <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476300/infrastructure_cgsdfv.jpg" alt=""></div>
+        <div class="container">
+            <div class="pillars">
+                <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476302/talent_bhjpjn.jpg" alt=""></div>
+                <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476458/rnd_fiaz3f.jpg" alt=""></div>
+                <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476300/infrastructure_cgsdfv.jpg" alt=""></div>
+                <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476300/infrastructure_cgsdfv.jpg" alt=""></div>
+                <div class="col-md-4 pillar-single"><img class="img-responsive" src="http://res.cloudinary.com/domymi7op/image/upload/c_scale,f_auto/v1505476300/infrastructure_cgsdfv.jpg" alt=""></div>
+            </div>
         </div>
+            
+
+        <div class="pillar-title-cont">
+            <h2 class="pillar-title">The Conversation on Twitter</h2>
+        </div>
+
+        <div class="container">
+            <div class="mini-twitter-feeds">
+                <h3 class="pillar-title">The Pillars</h3>
+            </div>
+        </div>
+
+<!-- 
+        <div id="footer">
+
+        </div> -->
         
     </body>
 
