new - Initial Commit

--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
             </div>
         </div>
 
+        <div class="pillar-title-cont">
+            <h2 class="pillar-title">Contact</h2>
+        </div>
+
+        <div class="container">
+            <div class="contact-wrapper">
+                <div class="contact">
+                    because i did not type something abi       
+                </div>
+            </div>
+        </div>
+            
+            
+
 <!-- 
         <div id="footer">
 
